# libtpms

./: .clang-format  .gitignore  .travis.yml  CHANGES  CMakeLists.txt  INSTALL  LICENSE  MAINTAINERS  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  build.sh  cla-corporate.doc  cla-individual.doc  config-cmake.h.in  config.h.in  configure  configure.ac  configure.in  libtpms-pcclient.pc.in  libtpms.pc.in  meson.build  meson.options  meson_migration_plan.md  meson_options.txt
debian/: changelog  control  (+2 more)
man/man3/: Makefile.am  Makefile.in  TPMLIB_ClearFlags.pod  TPMLIB_DecodeBlob.3  TPMLIB_DecodeBlob.pod  TPMLIB_GetInfo.3  TPMLIB_GetInfo.pod  TPMLIB_GetTPMProperty.3  TPMLIB_GetTPMProperty.pod  TPMLIB_GetVersion.3  TPMLIB_MainInit.3  TPMLIB_MainInit.pod  TPMLIB_Process.3  TPMLIB_Process.pod  TPMLIB_RecreateSvnBaseSecret.pod  TPMLIB_RegisterCallbacks.3  TPMLIB_RegisterCallbacks.pod  TPMLIB_SetBufferSize.3  TPMLIB_SetBufferSize.pod  TPMLIB_SetDebugFD.3  TPMLIB_SetDebugFD.pod  TPMLIB_SetFlags.3  TPMLIB_SetProfile.pod  TPMLIB_SetState.3  TPMLIB_SetState.pod  TPMLIB_ValidateState.3  TPMLIB_ValidateState.pod  TPMLIB_VolatileAll_Store.3  TPMLIB_VolatileAll_Store.pod  TPMLIB_WasManufactured.pod  TPM_IO_Hash_Start.3  TPM_IO_Hash_Start.pod  TPM_IO_TpmEstablished_Get.3  TPM_IO_TpmEstablished_Get.pod  TPM_Malloc.3  TPM_Malloc.pod  meson.build
src/: CMakeLists.txt  Makefile.am  Makefile.in  compiler.h  disabled_interface.c  libtpms.syms  meson.build  tpm_admin.h  tpm_audit.c  tpm_audit.h  tpm_auth.h  tpm_crypto.c  tpm_crypto.h  tpm_crypto_freebl.c  tpm_cryptoh.c  tpm_daa.c  tpm_daa.h  tpm_debug.c  tpm_debug.h  tpm_delegate.h  tpm_digest.c  tpm_digest.h  tpm_error.c  tpm_global.c  tpm_identity.h  tpm_init.c  tpm_io.h  tpm_key.h  tpm_library.c  tpm_library_conf.h  tpm_library_intern.h  tpm_load.c  tpm_load.h  tpm_maint.c  tpm_maint.h  tpm_memory.c  tpm_migration.c  tpm_nonce.h  tpm_nvfile.c  tpm_nvfile.h  (+20 more)
src/tests/: tpm2_nvram_offsetchecks.c
src/tpm12/: CMakeLists.txt  tpm_admin.c  tpm_audit.c  tpm_auth.c  tpm_auth.h  tpm_commands.h  tpm_constants.h  tpm_counter.c  tpm_counter.h  tpm_crypto.c  tpm_crypto.h  tpm_crypto_freebl.c  tpm_cryptoh.c  tpm_cryptoh.h  tpm_daa.c  tpm_debug.c  tpm_debug.h  tpm_delegate.c  tpm_digest.c  tpm_digest.h  tpm_global.c  tpm_global.h  tpm_identity.c  tpm_identity.h  tpm_init.c  tpm_init.h  tpm_key.c  tpm_key.h  tpm_libtpms_io.c  tpm_load.c  tpm_load.h  tpm_maint.c  tpm_migration.c  tpm_migration.h  tpm_nonce.c  tpm_nvfile.c  tpm_nvram.c  tpm_nvram.h  tpm_nvram_const.h  tpm_openssl_helpers.c  (+28 more)
src/tpm2/: ACT.h  ACTCommands.c  ACT_SetTimeout_fp.h  ACT_spt.c  ACT_spt_fp.h  AlgorithmCap.c  AlgorithmCap_fp.h  AlgorithmTests.c  AlgorithmTests_fp.h  AsymmetricCommands.c  Attest_spt.c  Attest_spt_fp.h  AttestationCommands.c  AuditCommands.c  BackwardsCompatibility.h  BackwardsCompatibilityBitArray.c  BackwardsCompatibilityBitArray.h  BackwardsCompatibilityObject.c  BackwardsCompatibilityObject.h  BaseTypes.h  Bits.c  Bits_fp.h  BnConvert.c  BnEccConstants.c  BnEccData.c  BnMath.c  BnMemory.c  BnSupport_Interface.h  BnUtil_fp.h  CMakeLists.txt  Cancel.c  Capabilities.h  CapabilityCommands.c  CertifyCreation_fp.h  CertifyX509_fp.h  ChangeEPS_fp.h  ChangePPS_fp.h  ClearControl_fp.h  Clock.c  ClockCommands.c  (+330 more)
src/tpm2/TPMCmd/Platform/include/: Platform.h  PlatformACT.h  PlatformClock.h  PlatformData.h  PlatformInternal.h
src/tpm2/TPMCmd/Platform/include/prototypes/: platform_public_interface.h
src/tpm2/TPMCmd/Platform/src/: Cancel.c  DebugHelpers.c  Entropy.c  ExtraData.c  Failure.c  Init.c  LocalityPlat.c  NVMem.c  NVVirtual.c  PPPlat.c  PlatformACT.c  PlatformData.c  PlatformPcr.c  PowerPlat.c  SelfTest.c  Unique.c  VendorInfo.c
src/tpm2/TPMCmd/Simulator/include/: TpmTcpProtocol.h
src/tpm2/TPMCmd/Simulator/include/prototypes/: Simulator_fp.h
src/tpm2/TPMCmd/Simulator/src/: TPMCmdp.c  simulatorPrivate.h  simulator_sysheaders.h
src/tpm2/TPMCmd/TpmConfiguration/TpmConfiguration/: TpmBuildSwitches.h  TpmProfile.h  TpmProfile_CommandList.h  TpmProfile_Common.h  TpmProfile_Misc.h
src/tpm2/TPMCmd/TpmConfiguration/TpmConfiguration/VendorCommands/: CommandDispatchData_CommandStructures.inl  CommandDispatchData_s_CommandDataArray.inl  VendorCommandList.h
src/tpm2/TPMCmd/TpmConfiguration/TpmVendorCommandHandlers/: Vendor_TCG_Test.c
src/tpm2/VendorCommands/: CommandAttributeData_s_ccAttr.inl  CommandAttributeData_s_commandAttributes.inl  CommandDispatchData_CommandStructures.inl  Vendor_TCG_Test.c  Vendor_TCG_Test_fp.h
src/tpm2/crypto/: CryptCmac_fp.h  CryptEcc.h  CryptEccCrypt_fp.h  CryptEccKeyExchange_fp.h  CryptEccMain_fp.h  CryptEccSignature_fp.h  CryptHash.h  CryptHashData.h  CryptHash_fp.h  CryptPrimeSieve_fp.h  CryptPrime_fp.h  CryptRand.h  CryptRand_fp.h  CryptRsa.h  CryptRsa_fp.h  CryptSmac_fp.h  CryptSym.h  CryptSym_fp.h  CryptTest.h  CryptUtil_fp.h  ECC_Decrypt_fp.h  ECC_Encrypt_fp.h
src/tpm2/crypto/openssl/: BnConvert_fp.h  BnMath_fp.h  BnMemory_fp.h  BnOssl.h  BnToOsslMath.c  BnToOsslMath.h  BnToOsslMath_fp.h  BnValues.h  ConsttimeUtils.h  CryptCmac.c  CryptDataEcc.c  CryptDes.c  CryptEccCrypt.c  CryptEccKeyExchange.c  CryptEccMain.c  CryptEccSignature.c  CryptHash.c  CryptHashData.c  CryptPrime.c  CryptPrimeSieve.c  CryptRand.c  CryptRsa.c  CryptSmac.c  CryptSym.c  Helpers.c  Helpers_fp.h  LibSupport.h  Sm3Helper_fp.h  Sm4Helper_fp.h  TpmToOsslDesSupport.c  TpmToOsslDesSupport_fp.h  TpmToOsslHash.h  TpmToOsslMath.c  TpmToOsslMath.h  TpmToOsslMath_fp.h  TpmToOsslSupport.c  TpmToOsslSupport_fp.h  TpmToOsslSym.h  TpmToTpmBigNumMath.h  consttime.txt  (+1 more)
tests/: Makefile.am  Makefile.in  base64decode.c  base64decode.sh  common  freebl_sha1flattensize.c  fuzz.c  fuzz.cc  fuzz.sh  kdfa_openssl.c  kdfe_openssl.c  meson.build  nvram_offsets.c  object_size.c  oss-fuzz.sh  run-fuzzer.sh  tpm2_createprimary.c  tpm2_createprimary.sh  tpm2_cve-2023-1017.c  tpm2_cve-2023-1017.sh  tpm2_cve-2023-1018.c  tpm2_cve-2023-1018.sh  tpm2_pcr_read.c  tpm2_pcr_read.sh  tpm2_run_test.sh  tpm2_selftest.c  tpm2_selftest.sh  tpm2_setprofile.c  tpm2_setprofile.sh
(+343 files in other folders)
